# sct-data-generation

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/: config.py  logging.py  main.py
src/generator/: __init__.py  export.py  generate_sct.py  validator_model.py
src/llm/: openai_client.py
src/llm/gemini/: __init__.py  gemini_client.py  services.py
src/llm/openai/: __init__.py  openai_client.py  services.py
src/prompts/: __init__.py  american_guideline.xml  american_guideline_summary.xml  british_guideline.xml  british_guideline_summary.xml  european_guideline.xml  european_guideline_summary.xml  sct_item_prompt.j2  sct_item_prompt.xml  sct_validator_prompt.xml
src/schemas/: __init__.py  sct_schemas.py
src/sct_generation/: __init__.py  __main__.py  config.py
src/sct_generation/generator/: __init__.py  generate_sct.py  utils.py
src/sct_generation/schemas/: llm_schemas.py  sct_schemas.py  validator_schemas.py
src/sct_generation/validators/: __init__.py  validator.py
src/validators/: __init__.py  utils.py  validator.py
