[tool.poetry]
name = "sct-generation"
version = "0.1.0"
description = "SCT (Script Concordance Test) data generation using OpenAI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
jinja2 = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
sct-generate = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
